# vocal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DISTRIBUTION_STRATEGY.md  Dockerfile  LICENSE  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  Recording.m4a  VOICESTACK_API_FIRST_ARCHITECTURE.md  docker-compose.yml  download_model.py  example_transcribe.py  live_openapi.json  pyproject.toml  sdk_example.py  test_api.py  vocal_client.py
.github/workflows/: ci.yml
docs/: README.md  deps.md  manual-testing.md  project.md
docs/developer/: adding-models.md  architecture.md  contributing.md  release.md  testing.md
docs/user/: cli.md  configuration.md  getting-started.md  models.md
scripts/: README.md  generate_supported_models.py  run_tests.py  test_qwen3_omni_live.py  validate.py
test_assets/: README.md
test_assets/audio/: Recording.m4a
test_assets/expected/: Recording.m4a.txt  en-AU-WilliamNeural.mp3.txt
tests/: README.md  test_e2e.py  test_tts_formats.py
tests/contract/: conftest.py  test_health.py  test_models_api.py  test_transcription_contract.py  test_tts_contract.py
tests/unit/: test_audio_utils.py  test_catalog_coverage.py  test_config.py  test_logging.py  test_registry_models.py  test_stt_adapters.py  test_stt_service_dispatch.py  test_tts_capabilities.py  test_tts_service_dispatch.py
vocal/: __init__.py
