[project]
name = "vocal"
version = "0.2.0"
description = "Generic Speech AI Platform - Ollama for Voice Models"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "SSPL-1.0" }
authors = [
    { name = "Vocal Contributors" }
]
keywords = ["speech-to-text", "transcription", "whisper", "ollama", "ai", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.32.5",
    "vocal-api",
    "vocal-core",
    "vocal-sdk",
    "vocal-cli",
    "torch>=2.0.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/api",
    "packages/sdk",
    "packages/cli"
]

[tool.uv.sources]
vocal-core = { workspace = true, editable = true }
vocal-api = { workspace = true, editable = true }
vocal-sdk = { workspace = true, editable = true }
vocal-cli = { workspace = true, editable = true }
torch = { index = "pytorch" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
