[project]
name = "vocal-ai"
version = "0.3.1"
description = "Ollama-style Voice Model Management - Self-hosted OpenAI-compatible Speech AI"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "SSPL-1.0" }
authors = [
    { name = "Vocal Contributors" }
]
keywords = ["speech-to-text", "transcription", "whisper", "ollama", "tts", "stt", "openai-compatible", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Environment :: Console",
]
dependencies = [
    "vocal-core>=0.3.0",
    "vocal-sdk>=0.3.0",
    "vocal-api>=0.3.0",
    "vocal-cli>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/niradler/vocal"
Documentation = "https://github.com/niradler/vocal#readme"
Repository = "https://github.com/niradler/vocal"
Issues = "https://github.com/niradler/vocal/issues"

[project.scripts]
vocal = "vocal_cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vocal"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/api",
    "packages/sdk",
    "packages/cli"
]

[tool.uv.sources]
vocal-core = { workspace = true, editable = true }
vocal-api = { workspace = true, editable = true }
vocal-sdk = { workspace = true, editable = true }
vocal-cli = { workspace = true, editable = true }
torch = { index = "pytorch" }

[dependency-groups]
dev = [
    "build>=1.4.0",
    "bump-my-version>=1.2.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.1.0",
    "twine>=6.2.0",
]

[tool.ruff]
line-length = 300
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "C90", # mccabe complexity
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP042", # str+Enum to StrEnum (optional Python 3.11+ upgrade)
]

[tool.ruff.lint.isort]
known-first-party = ["vocal_core", "vocal_api", "vocal_sdk", "vocal_cli"]
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py

[tool.bumpversion]
current_version = "0.3.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "packages/core/pyproject.toml"

[[tool.bumpversion.files]]
filename = "packages/api/pyproject.toml"

[[tool.bumpversion.files]]
filename = "packages/sdk/pyproject.toml"

[[tool.bumpversion.files]]
filename = "packages/cli/pyproject.toml"

[[tool.bumpversion.files]]
filename = "packages/core/vocal_core/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "packages/sdk/vocal_sdk/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "packages/cli/vocal_cli/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "vocal/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
